==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.12.5 Mar 03 2015
. (kfsone) Added "--opt=shipvendors" to the maddavo plugin,
. (kfsone) Added "--opt=csvonly" to maddavo plugin (stop after csv imports),
. (kfsone) Changed "market" command, "-B" and "-S" are now optional. Default
    behavior is equivalent to --buy --sell

v6.12.4 Mar 02 2015
. (kfsone) Added 175 Systems,
. (kfsone) Fixed #193 "run" was ignoring --ls-max,
+ DRy411S : ShipVendors

v6.12.3 Mar 01 2015
. (kfsone) Improved how we handle some edge cases with --from and --to,
. (kfsone) Improved feedback when requesting an unreachable journey,
   e.g. --from selianciens --to eravate --ly 9.23 --hops 2 --jumps 2
   (the journey requires at least 9 jumps but the options only allow 4),
. (kfsone) Fixed #185 --from and --to giving a "set" error,
. (kfsone) Fixed #188 Allow multiple ships per "shipvendor",
. (kfsone) Fixed #190 "station -r" wasn't updated the .csv file,
. (kfsone) Cleaned up the output of "local" command when showing stations,
. (kfsone) Fixed #191 'set' does not support indexing
+ DRy411S : ShipVendors

v6.12.2 Feb 26 2015
. (kfsone) "run" command:
  - added "--direct" option:
    - only allows 1 hop,
    - --jumps and --ly-per are ignored entirely,
    - ignores route/distance between stations,
   e.g.
     trade.py run --from achenar --to lave --cap 50 --cr 100000 --direct

v6.12.1 Feb 26 2015
. (kfsone) "buy" command:
  - now accepts multiple arguments (e.g. explosives,clothing),
  - new "--one-stop" (-1) option only shows stations that carry the full list,
  - mixing ships and items is not allowed,
   e.g.
     trade.py buy food clothing fish
     trade.py buy --near achenar fish,food,grain --one-stop
     trade.py buy --near achenar --ly 100 type6,type7 --one-stop